--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1 class = "header--main">Discover hidden places in the world around you</h1>
     <p class = "link--cta"><a href = "#"></a>Download Excursion (Coming soon!)</p>
-    <video autoplay loop>
+    <video autoplay loop muted>
         <source src = "resources/videos/excursion.mp4" type = "video/mp4">
     </video>
+    <h2 class = "header--secondary">Your personal travel guide</h2>
+    <h4 class = "header--sub-header">Excursion remembers place you like, and recommends new points of interest around you.</h4>
 </body>
 
 </html>
