--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </video>
     <h2 class = "header--secondary">Your personal travel guide</h2>
     <h4 class = "header--sub-header">Excursion remembers place you like, and recommends new points of interest around you.</h4>
+    <p><img src = "resources/images/camp.webp"></p>
+    <p><img src = "resources/images/phone.webp"></p>
+    <h4 class = "header--sub-header">Coming Soon for Iphone and Android</h4>
+    <p class = "link--cta"><a href = "#"></a>Download Excursion (Coming soon!)</p>
 </body>
 
 </html>
