--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><img src = "resources/images/phone.webp"></p>
     <h4 class = "header--sub-header">Coming Soon for Iphone and Android</h4>
     <p class = "link--cta"><a href = "#"></a>Download Excursion (Coming soon!)</p>
+    <p class = "footer--copyright">© Excursion</p>
 </body>
 
 </html>
